--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #030712;
+  --foreground: #ededed;
 }
 
 @theme inline {
@@ -12,16 +12,9 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-
-  pre {
+pre {
     background: var(--background);
   }
-}
 
 body {
   background: var(--background);
@@ -43,4 +36,13 @@ pre {
 
 .debug {
   border: 1px dashed red !important;
+}
+
+input {
+  background: #000;
+}
+
+
+.pointer {
+  cursor:pointer;
 }
